--- a/MiniLinkedin/app/src/main/res/layout/activity_main.xml
+++ b/MiniLinkedin/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:id="@+id/activity_main"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
@@ -39,8 +39,9 @@
                     android:layout_height="18dp"
                     android:layout_gravity="center_vertical"
                     android:layout_marginLeft="10dp"
-                    android:background="@android:color/background_dark"
-                    android:contentDescription="basic_info_edit"/>
+                    android:src="@drawable/ic_border_color_black_18dp"
+                    android:contentDescription="basic_info_edit"
+                    android:background="?attr/selectableItemBackground"/>
 
             </LinearLayout>
 
@@ -60,7 +61,8 @@
                 android:layout_height="64dp"
                 android:layout_alignParentRight="true"
                 android:contentDescription="profile_photo"
-                android:background="@android:color/holo_blue_light"/>
+                android:src="@drawable/G12_Girl"
+                android:background="?attr/selectableItemBackground"/>
 
         </RelativeLayout>
 
@@ -89,7 +91,8 @@
                     android:layout_height="18dp"
                     android:layout_gravity="center_vertical"
                     android:contentDescription="education_edit"
-                    android:background="@android:color/holo_orange_dark"/>
+                    android:src="@drawable/ic_add_black_18dp"
+                    android:background="?attr/selectableItemBackground"/>
 
             </LinearLayout>
 
@@ -120,7 +123,8 @@
                     android:layout_height="18dp"
                     android:layout_gravity="center_vertical"
                     android:contentDescription="school_edit"
-                    android:background="@android:color/holo_purple"/>
+                    android:background="?attr/selectableItemBackground"
+                    android:src="@drawable/ic_border_color_black_18dp"/>
 
             </LinearLayout>
 
