--- a/MiniLinkedin/app/src/main/res/layout/activity_main.xml
+++ b/MiniLinkedin/app/src/main/res/layout/activity_main.xml
@@ -17,11 +17,12 @@
         android:orientation="vertical">
 
         <RelativeLayout
+            android:id="@+id/basic_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <LinearLayout
-                android:id="@+id/name"
+                android:id="@+id/name_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
@@ -31,12 +32,14 @@
                 android:layout_toStartOf="@+id/profile_image">
 
                 <TextView
+                    android:id="@+id/name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="24sp"
                     tools:text="Saiki"/>
 
                 <ImageButton
+                    android:id="@+id/edit_basic_info_btn"
                     android:layout_width="18dp"
                     android:layout_height="18dp"
                     android:layout_gravity="center_vertical"
@@ -55,7 +58,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:layout_below="@+id/name"
+                android:layout_below="@+id/name_layout"
                 android:textSize="24sp"
                 tools:text="xxx@xxx.com"/>
 
@@ -72,17 +75,20 @@
         </RelativeLayout>
 
         <LinearLayout
+            android:id="@+id/education_section"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <LinearLayout
+                android:id="@+id/section_education"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="15dp">
 
                 <TextView
+                    android:id="@+id/section_title_education"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -92,6 +98,7 @@
                     />
 
                 <ImageButton
+                    android:id="@+id/edit_education_btn"
                     android:layout_width="18dp"
                     android:layout_height="18dp"
                     android:layout_gravity="center_vertical"
@@ -102,20 +109,24 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/education_entries"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <LinearLayout
+                    android:id="@+id/school_info"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1">
                     <TextView
+                        android:id="@+id/school"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="16sp"
                         tools:text="NEU"/>
 
                     <TextView
+                        android:id="@+id/school_period"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="18sp"
@@ -124,6 +135,7 @@
 
 
                 <ImageButton
+                    android:id="@+id/edit_school_info_btn"
                     android:layout_width="18dp"
                     android:layout_height="18dp"
                     android:layout_gravity="center_vertical"
@@ -134,6 +146,7 @@
             </LinearLayout>
 
             <TextView
+                android:id="@+id/courses"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
