add dynamic views and EducationEditActivity

--- a/MiniLinkedin/app/src/main/res/layout/activity_main.xml
+++ b/MiniLinkedin/app/src/main/res/layout/activity_main.xml
@@ -75,84 +75,39 @@
         </RelativeLayout>
 
         <LinearLayout
+            android:id="@+id/section_education_starter"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="15dp">
+
+            <TextView
+                android:id="@+id/section_title_education"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/section_education"
+                android:textSize="24sp"
+                android:textAllCaps="true"
+                />
+
+            <ImageButton
+                android:id="@+id/edit_education_btn"
+                android:layout_width="18dp"
+                android:layout_height="18dp"
+                android:layout_gravity="center_vertical"
+                android:contentDescription="@string/edit_education"
+                android:src="@drawable/ic_add_black_18dp"
+                android:background="?attr/selectableItemBackground"/>
+
+        </LinearLayout>
+
+        <LinearLayout
             android:id="@+id/education_section"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"/>
 
-            <LinearLayout
-                android:id="@+id/section_education"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="15dp">
-
-                <TextView
-                    android:id="@+id/section_title_education"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/section_education"
-                    android:textSize="24sp"
-                    android:textAllCaps="true"
-                    />
-
-                <ImageButton
-                    android:id="@+id/edit_education_btn"
-                    android:layout_width="18dp"
-                    android:layout_height="18dp"
-                    android:layout_gravity="center_vertical"
-                    android:contentDescription="@string/edit_education"
-                    android:src="@drawable/ic_add_black_18dp"
-                    android:background="?attr/selectableItemBackground"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/education_entries"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <LinearLayout
-                    android:id="@+id/school_info"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1">
-                    <TextView
-                        android:id="@+id/school"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="16sp"
-                        tools:text="NEU"/>
-
-                    <TextView
-                        android:id="@+id/school_period"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="18sp"
-                        tools:text="(2015.9 - 2017.12)"/>
-                </LinearLayout>
-
-
-                <ImageButton
-                    android:id="@+id/edit_school_info_btn"
-                    android:layout_width="18dp"
-                    android:layout_height="18dp"
-                    android:layout_gravity="center_vertical"
-                    android:contentDescription="@string/edit_school"
-                    android:background="?attr/selectableItemBackground"
-                    android:src="@drawable/ic_border_color_black_18dp"/>
-
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/courses"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="16sp"
-                tools:text="-Algorithm\n-Computer System\n-Networking"/>
-
-        </LinearLayout>
 
     </LinearLayout>
 
